# roco2

./: .gitignore  CMakeLists.txt
include/roco2/: initialize.hpp
include/roco2/kernels/: base_kernel.hpp  firestarter.hpp
include/roco2/memory/: thread_local.hpp
include/roco2/metrics/: firestarter_metrics_adapter.hpp  storage.hpp
include/roco2/task/: experiment_task.hpp  task_plan.hpp
src/: CMakeLists.txt  firestarter_kernel.cpp  main.cpp
src/configurations/: CMakeLists.txt
src/configurations/ariel/: experiment.cpp
src/configurations/charon/: CMakeLists.txt  experiment.cpp
src/configurations/charon_turbo/: CMakeLists.txt  experiment.cpp
src/configurations/conway/: CMakeLists.txt  experiment.cpp
src/configurations/example/: CMakeLists.txt  experiment.cpp
src/configurations/hati/: CMakeLists.txt  experiment.cpp
src/configurations/p9_highlow/: experiment.cpp
src/configurations/p9_longrun/: experiment.cpp
src/configurations/xor/: experiment.cpp
src/test/: CMakeLists.txt
